==================== 2.25.92 ====================

2009-03-03  Vincent Untz  <vuntz@gnome.org>

	* private.h: fix header
	* Makefile.am: add private.h

2009-03-03  Vincent Untz  <vuntz@gnome.org>

	Make sure the translations of gnome-desktop can be used for the randr
	stuff. Fix bug #573744.

	* private.h: new file
	* gnome-desktop-utils.c:
	(_gnome_desktop_init_i18n): add _gnome_desktop_init_i18n() to init the
	i18n system.
	* gnome-desktop-item.c: (gnome_desktop_item_new): call
	_gnome_desktop_init_i18n() instead of init_i18n()
	(init_i18n): killed
	* gnome-desktop-utils.c:
	(gnome_desktop_prepend_terminal_to_vector): call
	_gnome_desktop_init_i18n()
	* gnome-rr.c: (gnome_rr_screen_new): call _gnome_desktop_init_i18n()

2009-02-19  Matthias Clasen  <mclasen@redhat.com>

	* gnome-rr.c (fill_out_screen_info): Revert the change from
	2009-01-19 and go back to using XRRGetScreenResources. This
	fixes the "Detect Monitors" button in the Screen Resolution
	capplet.

2009-02-19  Federico Mena Quintero  <federico@novell.com>

	* edid-parse.c: No longer define TRUE/FALSE, as glib.h brings
	those in.

2009-02-17  Federico Mena Quintero  <federico@novell.com>

	* edid-parse.c (decode_edid): Use g_new0() instead of calloc() so
	the caller can keep on using g_free(), and to actually abort on EOM.
	(decode_edid): Don't leak the info in case of error.

2009-02-17  Alexander Larsson  <alexl@redhat.com>

        * gnome-bg.c:
	Allow apps to ignore a pending change so they can avoid updating
	their background twice. (Nautilus needs this)

	Blow all expensive caches if we're not gonna update the background
	again in one minute.

	Do slightly less steps in slide transitions to avoid using to
	much resources on things that are not visible.

	Remove outstanding transitions on finalize

==================== 2.25.91 ====================

==================== 2.25.90 ====================

2009-02-04  Vincent Untz  <vuntz@gnome.org>

	* gnome-rr-config.c: