@@ -1,0 +1,39 @@
+#ifndef GNOME_RR_PRIVATE_H
+#define GNOME_RR_PRIVATE_H
+
+typedef struct ScreenInfo ScreenInfo;
+
+struct ScreenInfo
+{
+    int			min_width;
+    int			max_width;
+    int			min_height;
+    int			max_height;
+
+    XRRScreenResources *resources;
+    
+    GnomeRROutput **	outputs;
+    GnomeRRCrtc **	crtcs;
+    GnomeRRMode **	modes;
+    
+    GnomeRRScreen *	screen;
+
+    GnomeRRMode **	clone_modes;
+};
+
+struct GnomeRRScreen
+{
+    GdkScreen *			gdk_screen;
+    GdkWindow *			gdk_root;
+    Display *			xdisplay;
+    Screen *			xscreen;
+    Window			xroot;
+    ScreenInfo *		info;
+    
+    int				randr_event_base;
+    
+    GnomeRRScreenChanged	callback;
+    gpointer			data;
+};
+
+#endif
