@@ -1,3 +1,14 @@
+2009-03-06  Federico Mena Quintero  <federico@novell.com>
+
+	* gnome-rr-private.h: New uninstalled header.  This only contains
+	the definition of struct GnomeRRScreen, so that it can be used
+	from gnome-rr-config.c as well as gnome-rr.c.
+
+	* gnome-rr.c: Include gnome-rr-private.h; move struct
+	GnomeRRScreen to that file.
+
+	* Makefile.am (libgnome_desktop_2_la_SOURCES): Add gnome-rr-private.h.
+
 ==================== 2.25.92 ====================
 
 2009-03-03  Vincent Untz  <vuntz@gnome.org>
